# gif_editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/panyi/xyz/gifeditor/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidApplication.cpp  AndroidApplication.h  CMakeLists.txt  bridge.cpp
android/app/src/main/java/panyi/xyz/gifeditor/: NativeBridge.java
android/app/src/main/java/panyi/xyz/gifeditor/activity/: FilePickerActivity.kt  MainActivity.java  TestActivity.java  WelcomeActivity.kt
android/app/src/main/java/panyi/xyz/gifeditor/data/: PickerFile.kt  PickerParams.kt  RequestCodes.kt
android/app/src/main/java/panyi/xyz/gifeditor/util/: FileUtil.kt
android/app/src/main/java/panyi/xyz/textrender/: NativeBridge.java
android/app/src/main/java/panyi/xyz/textrender/activity/: MainActivity.java  WelcomeActivity.kt
android/app/src/main/java/panyi/xyz/textrender/data/: PickerFile.kt  PickerParams.kt
android/app/src/main/java/panyi/xyz/textrender/util/: Log.kt
android/app/src/main/res/layout/: activity_file_picker.xml  activity_test.xml  activity_welcome.xml  item_video.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/shader/sprite/: sprite_batch_frag.glsl
purple/include/: json.h  purple.h  utils.h
purple/include/render/: common.h  render.h  render_batch.h
purple/include/resource/: asset_manager.h
purple/include/widget/: timer.h
purple/src/: purple.cpp  utils.cpp
purple/src/render/: render.cpp  render_batch.cpp
purple/src/render/cmd/: cmd_round_rect.cpp
purple/src/resource/: asset_manager.cpp
purple/src/widget/: timer.cpp
src/: application.cpp  application.h  gif_editor_app.cpp  gif_editor_app.h  main.cpp  main_view.cpp  main_view.h
src/codec/: decode.cpp  decode.h
src/common/: app_util.cpp  app_util.h  colors.h  time_util.cpp  time_util.h  widget_loading.cpp  widget_loading.h  widget_toast.cpp  widget_toast.h
src/module/: base_widget.cpp  base_widget.h  gif_editor_app.cpp  gif_editor_app.h  input_action.cpp  input_action.h  main_view.cpp  main_view.h  save_button.cpp  save_button.h  timeline.cpp  timeline.h
vender/: vender.md
